[package]
name = "duckblog"
version = "0.2.6"
edition = "2021"
rust-version = "1.77.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = "0.3"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = { version = "0.12" }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
liquid = "0.26"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
copy_dir = "0.1.3"
itertools = "0.14.0"
color-eyre = "0.6.3"
sentry = { version = "0.37", default-features = false, features = ["anyhow", "rustls", "backtrace", "reqwest", "tokio", "contexts", "panic", "debug-images"] }
dotenvy = "0.15.7"
rss = "2.0"
serde_json = "1.0"
serde_yaml_ng = "0.10.0"

[profile.release]
debug = true
lto = "off"
split-debuginfo = "unpacked"