[package]
name = "duckblog"
version = "0.2.6"
edition = "2021"
rust-version = "1.77.2"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.3"
copy_dir = "0.1.3"
dotenvy = "0.15.7"
itertools = "0.14.0"
liquid = "0.26"
pulldown-cmark = { version = "0.13" }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rss = "2.0"
sentry = { version = "0.45", default-features = false, features = [
  "anyhow",
  "rustls",
  "backtrace",
  "reqwest",
  "tokio",
  "contexts",
  "panic",
  "debug-images",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { version = "0.1", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
