[package]
name = "blog-serverless"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.15.0"
shuttle-tide = "0.15.0"
tokio = "1.28.0"
tide = "0.16.0"
include_dir = "0.7.3"
new_mime_guess = "4.0.1"
